--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "author": "jaminurislam",
   "license": "ISC",
-  "lint-staged":{
-    "*": "yarn lint-prettier"
+  "lint-staged": {
+    "src/**/*ts": "yarn lint-prettier"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
