--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,9 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   // HERE
   "extends": [
     "eslint:recommended",
@@ -12,8 +14,19 @@
     "prettier"
   ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "no-unused-vars": "error",
+    "no-console": "warn",
+    "quotes": [
+      "warn",
+      "single"
+    ],
+    "no-undef": "error",
+    "no-unused-expressions": "error",
+    "no-unreachable": "error",
+    "@typescript-eslint/consistent-type-definitions": [
+      "error",
+      "type"
+    ]
   },
   "env": {
     "browser": true,
