--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,12 @@
     "prettier"
   ],
   "rules": {
-    "no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
     "no-console": "warn",
     "quotes": [
       "warn",
